[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
notify-rust = "4.10.0"
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
test-case = "3.3.1"
